[package]
name = "bevy_merge_fruit"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[dependencies]
bevy = { version = "0.12.0" }
bevy_xpbd_2d = "0.3"
fastrand = "2.0.1"

[features]
default = []
debug = []

dev = ["bevy/dynamic_linking"]
